examples/negative/pipes/pipe_option_rejected.kai
# Issue #594 — `Option` keeps its existing per-head rejection
# diagnostic (issue #201 Constraint #1). The `pipe_rejection_reason`
# branch fires before the head-owner cache is consulted, so the user
# sees the "use `!` for propagation" suggestion regardless of what
# the cache contains.

fn main() : Int {
  let r = Some(42) | (n) => n + 1
  0
}
